# trellis-controller

./: .gitignore  CLAUDE.md  CMakeLists-host.txt  CMakeLists-simulation.txt  CMakeLists.txt  HOLD_SYSTEM_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INPUT-LAYER-ARCHITECTURE-REVIEW.md  INPUT_CONTROLLER_TEST_PLAN.md  MockClock.h  PARAMETER_LOCK_TESTING.md  README.md  WORKPLAN-NON-REALTIME.md  WORKPLAN-PARAMETER-LOCKS-v2-REPAIR.md  WORKPLAN-PARAMETER-LOCKS-v2.md  WORKPLAN-SAMPLER.md  WORKPLAN-SIMULATION-CONTROL-KEYS.md  WORKPLAN-TEENSY.md  WORKPLAN.md  build.sh  dependencies.json  run_integration_tests.sh  samd51.ld  test_hold_system.py  test_input_integration  test_input_integration.cpp  test_param_lock.sh  test_param_lock_fix.sh  test_parameter_locks  test_parameter_locks.cpp  toolchain-arm-none-eabi.cmake
.claude/: CLAUDE.md  project.yaml
.claude/agents/: orchestrator.md
.claude/config/: settings.json
.claude/workflows/: build-system-management.yaml  embedded-optimization.yaml  main-development.yaml  platform-abstraction-review.yaml
arduino_trellis/arduino_trellis/: ArduinoMidiInput.h  arduino_trellis.ino  arduino_trellis_midi.ino
arduino_trellis/arduino_trellis/core/: AdaptiveButtonTracker.h  ControlGrid.h  IClock.h  IDisplay.h  IInput.h  IMidiInput.h  IMidiOutput.h  IShiftControls.h  NullMidi.h  ParameterLockTypes.h  SequencerStateManager.h  StepSequencer.h
arduino_trellis_midi/arduino_trellis_midi/: ArduinoMidiOutput.h  arduino_trellis_midi.ino
backlog/: TEENSY_INTEGRATION.md
docs/: 2025-09-05-WORKPLAN-SHIFT-KEYS.md  PARAMETER-LOCK-OPERATION-GUIDE.md  SIMULATION.md
docs/workplans/: README.md
docs/workplans/implemented/: 2025-09-07-WORKPLAN-SEPARATION-OF-CONCERNS.md  2025-09-08-PHASE2_IMPLEMENTATION_SUMMARY.md
docs/workplans/rejected/: 2025-09-06-WORKPLAN-PARAMETER-LOCKS.md
include/: NeoTrellis.h  StepSequencer.h  stdint.h  string.h
include/core/: AdaptiveButtonTracker.h  ControlGrid.h  ControlMessage.h  DebugLogger.h  EnhancedStepSequencer.h  GestureDetector.h  IDebugOutput.h  IDisplay.h  IGestureDetector.h  IHardware.h  IInputLayer.h  InputController.h  InputEvent.h  InputLayerFactory.h  InputStateEncoder.h  InputStateProcessor.h  InputSystemConfiguration.h  JsonState.h  JsonUtils.h  NonRealtimeSequencer.h  ParameterEngine.h  ParameterLockPool.h  ParameterLockTypes.h  SequencerState.h  SequencerStateManager.h  ShiftBasedGestureDetector.h  ShiftBasedGestureDetectorFactory.h  ShiftControls.h  StepSequencer.h
include/embedded/: ArduinoMidiInput.h  ArduinoMidiOutput.h  NeoTrellisDisplay.h  NeoTrellisHardware.h  NeoTrellisInput.h  SAMD51_I2C.h  SerialDebugOutput.h
include/simulation/: CompositeDebugOutput.h  ConsoleDebugOutput.h  CursesDisplay.h  CursesInput.h  CursesInputLayer.h  FileDebugOutput.h  InputStateAdapter.h
include/test/: CursesInput.h  MockInputLayer.h  stdint_compat.h
neotrellis_m4_peripheral/: neotrellis_m4_peripheral.ino
schemas/: sequencer-state.json
scripts/: setup_dependencies.sh
src/: NeoTrellis.cpp  StepSequencer.cpp  main.cpp  startup.c  string.c  system_init.c
src/core/: AdaptiveButtonTracker.cpp  ControlGrid.cpp  ControlMessage.cpp  GestureDetector.cpp  InputController.cpp  InputLayerFactory.cpp  InputStateEncoder.cpp  InputStateProcessor.cpp  JsonState.cpp  JsonUtils.cpp  NonRealtimeSequencer.cpp  ParameterEngine.cpp  ParameterLockPool.cpp  SequencerStateManager.cpp  ShiftBasedGestureDetector.cpp  ShiftControls.cpp  StepSequencer.cpp
src/embedded/: DebugSerial.cpp  DebugSerial.h  NeoTrellisDisplay.cpp  NeoTrellisInput.cpp  SAMD51_I2C.cpp  SAMD51_I2C.h  SeesawI2C.cpp  SeesawI2C.h  SeesawProtocol.h  SerialDebugOutput.cpp  main.cpp  runtime_stubs.cpp  test_main.cpp  test_minimal.cpp
src/simulation/: CompositeDebugOutput.cpp  ConsoleDebugOutput.cpp  CursesDisplay.cpp  CursesInput.cpp  CursesInputLayer.cpp  FileDebugOutput.cpp  InputStateAdapter.cpp  main.cpp  main_simple.cpp  main_with_input_controller.cpp
src/test/: MockInputLayer.cpp
teensy_controller/: NeoTrellisM4.cpp  NeoTrellisM4.h  teensy_controller.ino
test/: README.md  debug_param_lock_exit.cpp  package-lock.json  package.json  test_AdaptiveButtonTracker.cpp  test_ControlGrid.cpp  test_CursesInputSimulation.cpp  test_ParameterLockEndToEnd.cpp  test_ParameterLockIntegration.cpp  test_ParameterLockPool.cpp  test_SequencerStateManager.cpp  test_bitwise_state_solution  test_bitwise_state_solution.cpp  test_input_controller_integration.cpp  test_input_state_processor  test_input_state_processor.cpp  test_main.cpp  test_midi_sequencer.cpp  test_parameter_locks.cpp  test_shift_based_gesture_detector.cpp  test_state_based_input_architecture.cpp  test_step_sequencer.cpp  test_utils.h
test/integration/: InputControllerIntegrationTest.cpp
test/mocks/: MockClock.h  MockDebugOutput.h  MockHardware.h  MockInputLayer.h  MockMidiInput.h  MockMidiOutput.h
test/scripts/: test_param_lock.py  test_parameter_lock.sh  test_timing.sh
test/src/: midi-integration-test.ts  midi-types.ts  midi.d.ts  trellis-midi-tester.ts
test_states_parameter_locks/: test5_initial.json
